--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tokyochat",
+  "name": "Gechat",
   "version": "1.0.0",
-  "description": "Real time chat with socket.io and Node.js",
+  "description": "Real time chat for granger students!",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -16,8 +16,8 @@
     "real",
     "time",
     "socket.io",
-    "tokyo",
-    "japan"
+    "Granger",
+    "Middle School"
   ],
   "author": "Francisco Presencia <public@francisco.io> (https://francisco.io/)",
   "license": "MIT",
